...
  String get nicknameRequired => '닉네임을 입력해주세요';

  @override
  String get profileUpdateSuccess => '프로필이 성공적으로 업데이트되었습니다';

  @override
  String get cancel => '취소';

  @override
  String get title => '제목';

  @override
  String get postTitleHint => '게시글 제목을 입력하세요';
...
  String get bannerAdTitle => '배너 광고';

  @override
  String get bannerAdSubtitle => '홈 화면 광고';

  @override
  String get pointAdTitle => '포인트 광고';

  @override
  String get pointAdSubtitle => '포인트 적립 및 사용법';

  @override
  String get businessDirectoryTitle => '업소록';
...
  String get hotels => '호텔';

  @override
  String get hotelsDesc => '숙박 시설';

  @override
  String get carRental => '렌트카';

  @override
  String get carRentalDesc => '차량 대여 서비스';

  @override
  String get beautyAndWellness => '미용';

  @override
  String get beautyAndWellnessDesc => '미용실 및 자기 관리';

  @override
  String get realEstate => '부동산';

  @override
  String get realEstateDesc => '부동산 및 주택';

  @override
  String get entertainment => '유흥';
...
  String get entertainmentIslandTour => '섬투어';

  @override
  String get entertainmentFestival => '축제';

  @override
  String get quickPostEventMessage => '포인트 이벤트! 글 쓰고 랜덤포인트가 가득~';

  @override
  String get quickPostDefaultMessage => '오늘, 당신의 필리핀 생활은 어떠한가요?';

  @override
  String get searchHint => '검색';
...
  String get qrScanErrorTitle => 'QR 코드 스캔 실패';

  @override
  String get qrScanRetryGuide => 'QR 코드를 다시 스캔해 주세요.';

  @override
  String get goBack => '돌아가기';

  @override
  String get reviewAuthor => '작성자';

  @override
  String get reviewDate => '작성일';
...
