...
                  ),
                ],
              ),
              label: Lo.of(context)!.chat,
            ),
            BottomNavigationBarItem(
              key: ValueKey('menuButton'),
              icon: FaIcon(
                selectedItem == HomeNavigationItem.menu
                    ? FontAwesomeIcons.solidBars
                    : FontAwesomeIcons.thinBars,
              ),
              label: Lo.of(context)!.menu,
...
